styled and aligned the bottom and footer section and correctify the alignment of quotation section with respect to screen resize

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    margin:0
+}
 header,.footer{
     background-color: #1f2937;
 }
@@ -91,11 +94,11 @@ main{
 .quotation{
     padding: 120px 400px 100px 390px;
     background-color: #e5e7eb;
-    height:200px;
 }
 
 .quote{
     width: 720px;
+    margin:0 auto;
 }
 
 .quote>p{
@@ -109,4 +112,28 @@ main{
 .quote>h3{
     margin: 0;
     text-align:end;
+}
+
+.bottom{
+    margin:120px 320px;
+    border-radius: 10px;
+    padding:30px 80px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-between;
+    color:white;
+}
+
+.bottom-text>h2,.bottom-text>p{
+    margin:0
+}
+
+.bottom>button{
+    border-color: white;
+}
+
+.footer{
+    color:white;
+    text-align: center;
+    padding:50px 0;
 }
